<resources>
    <string name="app_name">Task2-Adrian-Menendez-HND</string>
    <string name="email">Introduce e-mail</string>
    <string name="pass">Introduce contraseña</string>
    <string name="btnEntrar">Entrar</string>
    <string name="nuevoUsuario">Nuevo Usuario</string>
    <string name="salir">Salir</string>
    <string name="email_hint">Introduce e-mail</string>
    <string name="nombre_hint">Introduce nombre</string>
    <string name="apellidos_hint">Introduce apellido</string>
    <string name="password_hint">Introduce contraseña</string>
    <string name="password2_hint">Introduce la contraseña de nuevo</string>
    <string name="btnGuardar">Guardar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perfil">Perfil</string>
    <string name="descripcion">Descripción del juego</string>
    <string name="personajes">Personajes</string>
    <string name="objetos">Objetos del mapa</string>
    <string name="tips">Tips sobre el juego</string>
    <string name="ajustes">Ajustes</string>

    <string name="descrip"> Se trata de un juego de naves cuyo objetivo es
                            matar a todos los enemigos y a un boss. Descárgate la app y dentro de ella
                            estarán los controles para saber jugar.</string>

    <string name="AjustesContacto">Contacto: 911234567</string>
    <string name="AjustesInfo">Información del desarrollador: info@cev.com</string>
    <string name="AjustesVersion">Versión: 2.0</string>
    <string name="compartir">Compartir el detalle</string>
    <string name="editarPerfil">Editar Perfil</string>
    <string name="datosinc">Rellene bien los datos</string>
    <string name="usu">No existe el usuario</string>
    <string name="oblig">Datos obligatorios</string>
    <string name="guardado">Usuario Guardado</string>
</resources>
