<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nuevo_usuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alumno1.task2_adrian_menendez_hnd.activities.NuevoUsuarioActivity"
    android:orientation="vertical">

    <EditText  android:id="@+id/editEmail"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"/>

    <EditText android:id="@+id/editNombre"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/nombre_hint"/>

    <EditText android:id="@+id/editApellidos"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/apellidos_hint"/>

    <EditText android:id="@+id/editPassword"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/password_hint"
        android:inputType="textPassword"/>

    <EditText android:id="@+id/editPassword2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/password2_hint"
        android:inputType="textPassword"/>

    <Button android:id="@+id/btnGuardar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/btnGuardar"/>

</LinearLayout>
