<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alumno1.task2_adrian_menendez_hnd.activities.LoginActivity"
    android:orientation="vertical">

    <EditText android:id="@+id/editEmail"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/email"/>

    <EditText android:id="@+id/editPass"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/pass"
        android:inputType="textPassword"/>

    <Button android:id="@+id/btnEntrar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/btnEntrar" />

    <Button android:id="@+id/btnNuevo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/nuevoUsuario"/>

</LinearLayout>
