<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alumno1.task2_adrian_menendez_hnd.fragments.AjustesFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView android:id="@+id/textoContacto"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/AjustesContacto"/>

    <TextView android:id="@+id/textoInfo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/AjustesInfo"/>

    <TextView android:id="@+id/textoVersion"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/AjustesVersion"/>

</LinearLayout>
